yayoi.css now forces footer to 100% width. This is a workaround for issue #5

--- a/css/yayoi.css
+++ b/css/yayoi.css
@@ -5,6 +5,8 @@
 
 body {background: #F5F5F5}
 
+footer {width: 100% !important}
+
 .page {max-width: 100% !important}
 
 .bg-yayoi {background: #E2DBE5}
